--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,10 @@
 
 /* ---------- general styling ---------- */
 html {
+  background-color: #F6F6F6;
   color: var(--text-color-dark);
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   height: 100%;
-  text-align: center;
   width: 100%;
   font-weight: 200;
 }
@@ -27,8 +27,9 @@ h1 {
   letter-spacing: 3px;
 }
 
-
-
+button {
+  font-size: 16px;
+}
 /* ---------- Grid container ---------- */
 .grid-container {
   display: grid;
@@ -55,7 +56,6 @@ header {
 
 .img-col {}
 
-
 .grid-container section {
   position: relative;
 }
@@ -65,6 +65,7 @@ header {
   background-color: var(--green);
   margin: auto;
   width: 100%;
+  text-align: center;
 }
 
 /* Style the links inside the navigation bar */
@@ -97,7 +98,6 @@ header {
   background: var(--light-grey);
   animation: fadeIn 0.4s;
 }
-
 
 /* ---------- animations ---------- */
 /* fade in */
@@ -168,8 +168,141 @@ header {
   background-color: var(--green);
 }
 
+/* Styling of profile */
+
+.profile {
+  text-align: center;
+}
+
 /* Settings styling */
-.settings h2 {
-text-align: left;
-height: 100px;
+
+.discover h4 {
+  margin: 0;
+  padding: 20px 0px 10px 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  text-align: left;
+}
+/* search area */
+
+.searcharea {
+  margin: 0;
+  padding: 10px 10px 10px 10px;
+  background-color: #fff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.searcharea span {
+  float: right;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+/* Styling of the slider */
+
+.slidecontainer {
+  width: 100%; /* Width of the outside container */
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 2px;
+  border-radius: 2px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 17.5px;
+  height: 17.5px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 5px 1px #555;
+  background: #FA7F48;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+/* styling of current location in settings */
+
+.location {
+  background-color: #fff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.location p {
+  text-align: left;
+  margin: 0;
+}
+
+.location span {
+  float: right;
+}
+.location div {
+  font-size: 12px;
+  float: right;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.location button {
+  width: 100%;
+  padding: 15px 10px 15px 10px;
+  border: none;
+  background-color: #fff;
+  font-family: 'Montserrat', sans-serif;
+}
+
+/* Styling of clear discover history */
+
+.clear_history {
+  background-color: #fff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.clear_history button {
+  width: 100%;
+  padding: 15px 10px 15px 10px;
+  border: none;
+  background-color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  text-align: left;
+}
+
+
+/* Styling of Contact and styling of law */
+
+.contact_law h4{
+  margin: 0;
+  padding: 40px 0px 10px 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  text-align: left;
+}
+
+.help_rep_law {
+  background-color: #fff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.help_rep_law p {
+  text-align: left;
+  margin: 0;
+}
+
+.help_rep_law button {
+  width: 100%;
+  padding: 15px 10px 15px 10px;
+  border: none;
+  background-color: #fff;
+  font-family: 'Montserrat', sans-serif;
 }
