--- a/css/main.css
+++ b/css/main.css
@@ -168,11 +168,14 @@ header {
   background-color: var(--green);
 }
 
+
+
 /* Styling of profile */
 
 .profile_img {
-  text-align: center;
   padding-top: 20px;
+  position: relative;
+  text-align: center;
 }
 
 .profile_img img{
@@ -180,10 +183,14 @@ header {
   border-radius: 50%;
 }
 
-.profile_img i{
-  font-size: 50px;
-  color: #FA7F48;
-  position: absolute;
+#preview-image {
+  text-align: center;
+  max-width: 100px;
+  max-height: 100px;
+}
+
+.change_pic {
+  text-align: center;
 }
 
 .profile {
