--- a/css/main.css
+++ b/css/main.css
@@ -323,7 +323,7 @@ header {
   font-family: 'Montserrat', sans-serif;
 }
 /* Tinder cards */
-#favorites{overflow: hidden;}
+#home{overflow: hidden;}
 .tinder {
   width: 100vw;
   height: 100vh;
@@ -361,13 +361,13 @@ header {
 }
 
 .tinder_love .fa-heart {
-  opacity: 0.7;
+  opacity: 0.9;
   -webkit-transform: scale(1);
           transform: scale(1);
 }
 
 .tinder_nope .fa-times {
-  opacity: 0.7;
+  opacity: 0.9;
   -webkit-transform: scale(1);
           transform: scale(1);
 }
@@ -381,6 +381,7 @@ header {
   align-items: flex-end;
   z-index: 1;
 }
+
 
 .tinder--card {
   display: inline-block;
