--- a/css/main.css
+++ b/css/main.css
@@ -453,6 +453,7 @@ max-width: 200px;
   background: #FFFFFF;
   display: inline-block;
   margin: 0 8px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
 .tinder--buttons button:focus {
