--- a/css/main.css
+++ b/css/main.css
@@ -404,7 +404,7 @@ max-width: 200px;
   max-width: 400px;
   height: 65vh;
   background: #FFFFFF;
-  padding-bottom: 40px;
+  padding-bottom: 0px;
   border-radius: 8px;
   overflow: hidden;
   position: absolute;
@@ -425,19 +425,22 @@ max-width: 200px;
 }
 
 .tinder--card h3 {
-  margin-top: 32px;
+  margin-top: 12px;
   font-size: 32px;
   padding: 0 16px;
   pointer-events: none;
-  color: darkorange;
+  color: black;
+  float: left;
+  font-family: 'Lobster', cursive;
 
 }
 
 .tinder--card p {
-  margin-top: 24px;
-  font-size: 20px;
+  margin-top: 30px;
+  font-size: 15px;
   padding: 0 16px;
   pointer-events: none;
+  float: right;
 }
 
 .tinder--buttons {
@@ -473,6 +476,25 @@ max-width: 200px;
 
 .fa-times {
   color: darkred;
+}
+
+.card-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.card-img-container {
+width: 600px;
+height: 600px;
+}
+
+.card-information {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.8);
+  width: 100%;
+  bottom: 10%;
 }
 
 @media only screen and (min-width: 900px) {
