--- a/css/main.css
+++ b/css/main.css
@@ -59,15 +59,6 @@ header {
   position: relative;
 }
 
-.loogin {
-max-width: 200px;
-}
-
-.profile_user {
-max-width: 100px;
-}
-
-
 .looogin {
   text-align: center;
 }
@@ -195,6 +186,16 @@ max-width: 100px;
   max-width: 150px;
   border-radius: 50%;
 }
+
+.loogin {
+max-width: 200px;
+}
+
+.profile_user {
+  padding-top: 20px;
+max-width: 100px;
+}
+
 
 #preview-image {
   text-align: center;
@@ -430,22 +431,31 @@ max-width: 100px;
 }
 
 .tinder--card h3 {
-  margin-top: 12px;
-  font-size: 32px;
-  padding: 0 16px;
+  margin: 0px;
+  font-size: 28px;
+  padding: 20px 16px;
   pointer-events: none;
   color: black;
   float: left;
   font-family: 'Lobster', cursive;
-
+  white-space: nowrap;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: left;
 }
 
 .tinder--card p {
-  margin-top: 30px;
+  margin: 0px;
   font-size: 15px;
-  padding: 0 16px;
+  padding: 20px 16px;
   pointer-events: none;
   float: right;
+}
+
+.tinder--card p span {
+  color: #FA7F48;
+  font-weight: 700;
 }
 
 .tinder--buttons {
@@ -504,6 +514,7 @@ height: 600px;
   background-color: rgba(255, 255, 255, 0.8);
   width: 100%;
   bottom: 10%;
+  display: flex;
 }
 
 @media only screen and (min-width: 900px) {
