--- a/css/main.css
+++ b/css/main.css
@@ -180,6 +180,7 @@ header {
   padding-top: 20px;
   position: relative;
   text-align: center;
+
 }
 
 .profile_img img{
@@ -196,6 +197,16 @@ max-width: 200px;
 max-width: 100px;
 }
 
+.right {
+  text-decoration: none;
+  background-color: darkred; /* Green */
+  color: white;
+  padding: 15px 32px;
+  border-radius: 15px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+}
 
 #preview-image {
   text-align: center;
@@ -209,6 +220,10 @@ max-width: 100px;
 
 .profile {
   text-align: center;
+}
+
+.profile h2 {
+  color: #FA7F48;
 }
 
 /* Settings styling */
@@ -245,7 +260,7 @@ max-width: 100px;
   width: 100%;
   height: 2px;
   border-radius: 2px;
-  background: #d3d3d3;
+  background: #FA7F48;
   outline: none;
   opacity: 0.7;
   -webkit-transition: .2s;
@@ -258,7 +273,7 @@ max-width: 100px;
   width: 17.5px;
   height: 17.5px;
   border-radius: 50%;
-  box-shadow: 0px 0px 5px 1px #555;
+  box-shadow: 0px 0px 2px 1px #555;
   background: #FA7F48;
   cursor: pointer;
 }
