--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,9 @@ header {
   text-align: center;
   overflow: hidden;
   border-bottom: 1px solid #B0B0B0;
+  position: fixed;
+  top: 0;
+  z-index: 999999999;
 }
 
 /* Style the links inside the navigation bar */
@@ -99,6 +102,7 @@ header {
 
 /* ---------- page styling ---------- */
 .page {
+  padding-top: 70px;
   display: none;
   height: 90vh;
   background: var(--light-grey);
@@ -550,11 +554,12 @@ max-width: 100px;
   overflow: hidden;
   border-radius: 50%;
   left: 20px;
+  box-shadow: 0px 0px 2px #555;
 
 }
 
 .fav-image img {
-  width: auto;
+  width: 100%;
   height: 100%;
 
 }
@@ -574,15 +579,15 @@ max-width: 100px;
 
 .fa-trash {
   font-size: 20px;
-  margin-left: 20px;
-  margin-top: 20px;
+  margin-left: 15px;
+  margin-top: 30px;
   opacity: 0.3;
   color: darkred;
 }
 
 .fa-angle-right {
   font-size: 25px;
-text-align: right;
+  text-align: right;
   margin-top: 20px;
   margin-right: 20px;
   opacity: 0.8;
