--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ html {
   height: 100%;
   width: 100%;
   font-weight: 200;
+
 }
 
 body {
@@ -100,6 +101,9 @@ header {
   color: #FA7F48;
 }
 
+::-webkit-scrollbar {
+display: none;
+}
 /* ---------- page styling ---------- */
 .page {
   padding-top: 70px;
@@ -209,6 +213,12 @@ max-width: 100px;
   text-align: center;
   display: inline-block;
   font-size: 16px;
+
+
+}
+
+.right:hover {
+    transform: scale(1.1);
 }
 
 #preview-image {
