--- a/css/main.css
+++ b/css/main.css
@@ -604,6 +604,16 @@ max-width: 100px;
   color: #FA7F48;
 }
 
+.detailimg {
+  width: 30%;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.detailimg img {
+  max-width: 100%;
+}
+
   .logo {
     width: 95px;
 
