--- a/css/main.css
+++ b/css/main.css
@@ -604,9 +604,17 @@ max-width: 100px;
   color: #FA7F48;
 }
 
+
+.detail {
+  text-align: center;
+  margin-top: 30px;
+  background-color: #fff;
+  width: 93vw;
+  max-width: 400px;
+}
+
 .detailimg {
-  width: 30%;
-  border-radius: 50%;
+  width: 100%;
   overflow: hidden;
 }
 
